--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
+      - name: Change directory
+        run: cd blood-loss-simulation
       - name: Install dependencies
         run: npm ci
       - name: Build
